    KPresenter tries to open the urls (image/* mimetypes are opened
    as pixmap objects, all others are opened as textobjects at the moment)

Reggie, 8.4.1999:
-----------------
- When saving text '>' and '<' are converted to &gt; and &lt;

Reggie, 9.4.1999:
-----------------
- Added a new effect for changes pages in screenpresentations
  (Now pages can fly away :-)

Reggie, 10.4.1999:
------------------
- Cleanups

Reggie, 12.4.1999:
------------------
- It's now possible to jump to a specific page during a screen presentation (e.g. if you
  want to skip some pages). Just enter [G] or select "Goto Page..." in the rmb menu
  during a screen presentation. Then it's possible to choose the page to which you want
  to jump.
- Added a menu entry to the screen presentation menu to be able to exit a screen presentation
  using this menu too
- rmb presentation menu is initialized correctly for presentations now
- Fixed a calculation bug in calculating the current page (happend in documents with lots of pages)

Reggie, 13.4.1999:
------------------
- Fixes

Reggie, 21.4.1999:
------------------
- Unicoded KPresenter and KTextObject (also load and save)
- Fixes in keycompression of KTextObject

Reggie, 26.4.1999:
------------------
- Using now the KCharSelect widget of libkdeui for the character selector dialog
- More work on unicode
- Corrected some stuff in the templates

Reggie, 27.4.1999:
------------------
- Some fixes in autoforms
- Added some new autoforms

Reggie, 28.4.1999:
------------------
- Fix with line begins and line ends

Reggie, 1.5.1999:
-----------------
- Using new template dialog
- Fix in autoformat choose dialog
- Started with implementation of HTML slideshow creation

Reggie, 2.5.1999:
-----------------
- Some fixes
- Finished implementation of HTML slideshow creation

Reggie, 3.5.1999:
-----------------
- Added PNG to filters when opening KFileDialog for opening a pic
- Fixes in pixmap loading